Website code uploaded to repo!

--- a/index.html
+++ b/index.html
@@ -1,9 +1,72 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Index page gaucher.io
+-->
 <html>
-<body>
+	<head>
+		<title>Samuel Gaucher</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+		<!-- SinaNova font -->
+		<link rel="stylesheet" href="assets/css/stylesheet.css" type="text/css" charset="utf-8" />
+		<style type="text/css">
+			body{font-family: 'SinaNovaReg';}
+		</style>
+	</head>
 
-<h1>This site is under construction</h1>
-<p>Yep!</p>
+	<!-- Menu -->
+	<div style="float: left">
+		<ul class="actions">
+			<li><a href="index.html" class="button primary"> &nbsp;&nbsp; SAMUEL GAUCHER</a></li>
+		</ul>
+	</div>
 
-</body>
+	<div style="float: right">
+		<nav> 
+			<a href="#" id="menu-icon"></a>
+			<ul>
+				<li><a href="about.html" class="button primary" >About</a></li>
+				<li><a href="research.html" class="button primary">Research</a></li>
+				<li><a href="blog.html" class="button primary">Blog</a></li>
+				<!-- <li><a href="music.html" class="button primary">Music</a></li> -->
+				<li><a href="about.html#contact" class="button primary">Contact&nbsp;&nbsp;&nbsp;&nbsp;</a></li>
+			</ul>
+		</nav>
+	</div><br>
+	<br>
+
+
+	<body class="is-preload">
+		<header><br><br></header>
+		
+		<!-- Wrapper -->
+			<div id="wrapper">
+				<!-- Main -->
+					<div id="main">
+					<!-- Introduction -->
+						<section id="intro" class="main" >
+							<div class="spotlight">
+								<span class="image"><img src="images/mehusky.png" alt="" /></span>
+								<div class="content">
+									<p style="font-size:135%; margin-left: -5%; margin-right: -5%"> I'm a physics PhD student in Berlin thrilled about quantum nanoelectronics and various <a href="research.html">other topics</a>. You can read more <a href="about.html">about me</a>, take a look at my <a href="CV-SG.pdf">CV</a>, and feel free to <a href="about.html#contact">get in touch</a> to share or ask anything about what I do. </p>
+								</div>
+							</div>
+						</section>
+					</div>
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+<!--<p class="copyright" style="font-size:80%;" align="center">&copy; Samuel Gaucher 2019.</p>-->
 </html>
