Fixed index.html text width for mobile screen sizes.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="spotlight">
 								<span class="image"><img src="images/mehusky.png" alt="" /></span>
 								<div class="content">
-									<p style="font-size:135%; margin-left: -5%; margin-right: -5%"> I'm a physics PhD student in Berlin thrilled about quantum nanoelectronics and various <a href="research.html">other topics</a>. You can read more <a href="about.html">about me</a>, take a look at my <a href="CV-SG.pdf">CV</a>, and feel free to <a href="about.html#contact">get in touch</a> to share or ask anything about what I do. </p>
+									<p style="font-size:135%;"> I'm a physics PhD student in Berlin thrilled about quantum nanoelectronics and various <a href="research.html">other topics</a>. You can read more <a href="about.html">about me</a>, take a look at my <a href="CV-SG.pdf">CV</a>, and feel free to <a href="about.html#contact">get in touch</a> to share or ask anything about what I do. </p>
 								</div>
 							</div>
 						</section>
