--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
 								<p>Molecular-beam epitaxy (MBE) is a technique to create single-crystalline thin-films by deposition of atoms under ultra-high vacuum. The strength of MBE lies in the capacity it offers to engineer crystals with sub-nanometer precision, hence creating nanostructures in which quantum mechanical effects are revealed and made (more easily) accessible. MBE has been instrumental in expanding our knowledge of semiconductors, and paved new ways for research in physics, materials science, and nanoelectronics.</p>
 								
 								<h2>Interests</h2>
-								<p>My scientific interests span a range of subjects: growth by MBE and physics of low-dimensional systems, spin phenomena in semiconductor nanostructures, electrical transport in magnetic semiconductors, integer and fractional quantum Hall effects. I wish to look deeper into: topological quantum condensed matter, quantum anomalous and spin Hall effects, chiral Majorana fermions, and the ways in which how all the above relate to quantum information technology. </p>
+								<p>My scientific interests span a range of subjects: growth by MBE and physics of low-dimensional systems, spin phenomena in semiconductor nanostructures, electrical transport in magnetic semiconductors, integer and fractional quantum Hall effects. I wish to look deeper into topological quantum condensed matter, quantum anomalous and spin Hall effects, chiral Majorana fermions, and the ways in which all the above can be applied to quantum information technology. </p>
 
 								<br>
 								<br>
