--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,14 @@
 -->
 <html>
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135626636-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-135626636-1');
+		</script>
 		<title>Samuel Gaucher</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
