--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 
 								<hr>
 								<h2>This website</h2>
-								<p>Many thanks to <a href="https://twitter.com/ajlkn">@ajlkn</a> from HTML5 UP for the original <a href="https://html5up.net/stellar">Stellar</a> template I've started with to make this website. The code is available and live in this <a href="https://github.com/samuelgaucher/gaucher.io">Git repository</a>.
+								<p>Many thanks to <a href="https://twitter.com/ajlkn">@ajlkn</a> from HTML5 UP for the original <a href="https://html5up.net/stellar">Stellar</a> template I've started with to make this website. The modified code is available in this <a href="https://github.com/samuelgaucher/gaucher.io">Git repository</a>.
 								</p>								
 
 							</section>
