Content updated. Created social media share buttons for blog articles.

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 								<h2>About</h2>
 								<p>I'm a PhD candidate in physics enrolled at Humboldt in Berlin. The essence of my work takes place at the <a href="http://www.pdi-berlin.de">Paul-Drude-Institut</a> under the supervision of Prof.&nbsp;Dr.&nbsp;<a href="https://tinyurl.com/y5tubggm">Henning Riechert</a> and Dr.&nbsp;<a href="https://tinyurl.com/y6dfpk5d">Jens Herfort</a>.</p>
 
-								<p><i>How can physics help build the electronics of tomorrow?</i> That's the question that motivates me. My <a href="http://gervaislab.mcgill.ca/Gaucher_MSc_Thesis.pdf">master's thesis</a> describes my first contributions to the cause. A general overview of my research can be found <a href="research.html">here</a>.</p>
+								<p>&ldquo;How can physics help build the electronics of tomorrow?&rdquo;&mdash; that's the question that motivates me. My <a href="http://gervaislab.mcgill.ca/Gaucher_MSc_Thesis.pdf">master's thesis</a> describes my first contributions to the cause. A general overview of my research can be found <a href="research.html">here</a>.</p>
 
 								<p>My <a href="CV-SG.pdf">CV</a> in a nutshell: an academia-oriented career path focused on the physics of new materials and their applications for quantum information technology.</p>
 
