--- a/blog.html
+++ b/blog.html
@@ -4,14 +4,6 @@
 -->
 <html>
 	<head>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135626636-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'UA-135626636-1');
-		</script>
 		<title>Samuel Gaucher</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -57,30 +49,21 @@
 					<!-- Content -->
 					<section id="blog1" class="main special">
 
-						<h2>There's nothing here for now.</h2>
+ 						<header class="major">
+							<h1><a href="blog/novel-template.html">A LaTeX novel template: meet Pleanote</a></h1>
+							<h2><sup>March 2019 &nbsp;|&nbsp; Berlin</sup></h2>
+							<p>LaTeX is a powerful free tool to produce nice-looking documents. I have a passion for typesetting since I first learned how to use it &mdash; and I'm not the only one...</p>
+						</header>
 
-
-<!-- 						<header class="major">
-							<h1><a href="berlin-doener.html">A first blog post</a></h1>
-							<h2><sup>Feb 15, 2019 &nbsp;|&nbsp; Berlin</sup></h2>
+<!-- 						<hr>
+						<header class="major">
+							<h1><a href="">A second blog post</a></h1>
+							<h2><sup>Date, 2019 &nbsp;|&nbsp; Berlin</sup></h2>
 							<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent...</p>
 							<p><span class="image main"><img src="images/berlin-doener/bilakis_crop.jpg" alt="" /></span></p>
 						</header>
+ -->
 
-						<hr>
-						<header class="major">
-							<h1><a href="berlin-doener.html">A second blog post</a></h1>
-							<h2><sup>Date, 2019 &nbsp;|&nbsp; Berlin</sup></h2>
-							<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent...</p>
-						</header>
-
-						<hr>
-						<header class="major">
-							<h1><a href="berlin-doener.html">A third blog post</a></h1>
-							<h2><sup>Date, 2019 &nbsp;|&nbsp; Berlin</sup></h2>
-							<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent...</p>
-						</header>
--->
 
 
 
