--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
  						<header class="major">
 							<h1><a href="blog/novel-template.html">A pleasing LaTeX novel template: meet Pleanote</a></h1>
 							<h2><sup>March 2019 &nbsp;|&nbsp; Berlin</sup></h2>
-							<p>LaTeX is a powerful free tool to produce nice-looking documents. I have a passion for typesetting since I first learned how to use it &mdash; and I'm not the only one...</p>
+							<p>LaTeX is a powerful free tool to produce nice-looking documents. I have a passion for typesetting since I first learned how to use it &mdash; and I'm not the only one.</p>
 						</header>
 
 <!-- 						<hr>
