CV detail changed.

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 
 								<p>&ldquo;How can physics help build the electronics of tomorrow?&rdquo;&mdash; that's the question that motivates me. My <a href="http://gervaislab.mcgill.ca/Gaucher_MSc_Thesis.pdf">master's thesis</a> describes my first contributions to the cause. A general overview of my research can be found <a href="research.html">here</a>.</p>
 
-								<p>My <a href="CV-SG.pdf">CV</a> in a nutshell: an academia-oriented career path focused on the physics of new materials and their applications for quantum information technology. I'm always eager to use some of the skills I’ve developed alongside my work to solve broader exciting problems, either scientific, technical, or quantitative.</p>
+								<p>My <a href="CV-SG.pdf">CV</a> in a nutshell: an academia-oriented career path focused on the physics of new materials and their applications for quantum information technology. Some of the skills I’ve developed alongside my work can be used to solve broader problems, either scientific, technical, or quantitative.</p>
 
 								<p>While working for <a href="http://gervaislab.mcgill.ca/home.php">Guillaume Gervais</a>, I was introduced to programming by some ingenious fellow graduate students. I'm now a committed user and advocate of their Python <a href="https://github.com/LabGUI/LabGUI">LabGUI</a>, which I cannot recommend highly enough.</p>
 
