--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 -->
 <html>
 	<head>
-		<!-- Google Analytics -->
+		<!-- Google Analytics NOT USED, need privacy policy-->
+		<!-- 
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135626636-1"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
@@ -13,6 +14,7 @@
 
 		  gtag('config', 'UA-135626636-1');
 		</script>
+		 -->
 		<title>Samuel Gaucher</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
