--- a/about.html
+++ b/about.html
@@ -4,8 +4,10 @@
 -->
 <html>
 	<head>
-		<!-- 
+
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135626636-1"></script>
+		<script src="assets/js/googan.js"></script>
+		<!-- 
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
@@ -91,6 +93,10 @@
 								</p>								
 
 							</section>
+							<div id="cookieConsent">
+   						 		<div id="closeCookieConsent">x</div>
+  						 	 	I wish to <a href="#" target="_blank">use cookies</a>! They give me an overview of the traffic on this website. <a class="cookieConsentOK">Ok!</a>
+							</div>
 					</div>
 			</div>
 
@@ -102,6 +108,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/privacy.js"></script>
 
 	</body>
 </html>
