--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
 -->
 <html>
 	<head>
-		<!-- Google Analytics NOT USED, need privacy policy-->
-		<!-- 
+		<!-- Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135626636-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
+		<script src="assets/js/googan.js"></script>
 
-		  gtag('config', 'UA-135626636-1');
-		</script>
-		 -->
 		<title>Samuel Gaucher</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -66,6 +59,11 @@
 								</div>
 							</div>
 						</section>
+
+						<div id="cookieConsent">
+						 	<div id="closeCookieConsent">x</div>
+						 	 I wish to <a href="#" target="_blank">use cookies</a>! They give me an overview of the traffic on this website. <a class="cookieConsentOK">Ok!</a>
+						</div>
 					</div>
 			</div>
 
@@ -77,6 +75,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/privacy.js"></script>
 
 	</body>
 <!--<p class="copyright" style="font-size:80%;" align="center">&copy; Samuel Gaucher 2019.</p>-->
