Cookie message changed.

--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
 
 					<div id="cookieConsent">
 					 	<div id="closeCookieConsent">x</div>
-					 	 I wish to <a href="privacy.html" target="_blank">use cookies</a>! They give me an overview of the traffic on this website. <a class="cookieConsentOK">Ok!</a>
+					 	 I wish to use <a href="privacy.html" target="_blank">cookies</a>! They give me an overview of the traffic on this website. <a class="cookieConsentOK">Ok!</a>
 					</div>
 				</div>
 			</div>
