Added all names to citations. Changed intro text.

--- a/research.html
+++ b/research.html
@@ -53,6 +53,8 @@
 
 						<!-- Content -->
 							<section class="main" style="font-size:118%;">
+								<h2>Experimental quantum nanoelectronics!</h2>
+								<h1> </h1>
 								<h2>Ongoing research</h2>
 								<p>I currently work on the growth by molecular-beam epitaxy of semiconductor heterostructures with ferromagnetic materials. The project adds to distributed efforts in the field of spintronics, the goal being to implement devices in which the electronic spin degree of freedom can be harnessed to achieve denser information processing. You can track our progress through the publications posted below. In 2017, I created a <a href="#P4">new 2D material</a> which I am now also investigating.</p>
 
@@ -67,7 +69,7 @@
 								<h2>Publications</h2>
 								<hr>
 								<h2 id="P5"><a href="https://doi.org/10.1088%2F1361-6641%2Faaddf0" style="color:#405c89;">Ferromagnet/semiconductor/ferromagnet hybrid trilayers grown using solid-phase epitaxy</a></h2>
-								<p><a>S. Gaucher</a> et al., Semicond. Sci. Technol. <b>33</b> 104005 (2018)</p>
+								<p><a>S. Gaucher</a>, B. Jenichen, and J. Herfort, Semicond. Sci. Technol. <b>33</b> 104005 (2018)</p>
 								<p>We're now able to grow lattice-matched semiconductors over both Fe<sub>3</sub>Si and Co<sub>2</sub>FeSi. Since the two ferromagnetic materials have different coercive fields, it is possible to control the orientation of their magnetization independently. This means a lot to produce devices that could be operated as spin-selective transistors. </p>
 
 								<section>
@@ -78,7 +80,7 @@
 								<hr>
 
 								<h2 id="P4"><a href="https://link.aps.org/doi/10.1103/PhysRevMaterials.2.051402" style="color: #405c89">Ordered structure of FeGe<sub>2</sub> formed during solid-phase epitaxy</a></h2>
-								<p>B. Jenichen, M. Hanke, <a>S. Gaucher</a>, et al. Phys. Rev. Mater. <b>2</b> 051402 (2018)</p>
+								<p>B. Jenichen, M. Hanke, <a>S. Gaucher</a>, A. Trampert, J. Herfort, H. Kirmse, B. Haas, E. Willinger, X. Huang, and S. C. Erwin. Phys. Rev. Mater. <b>2</b> 051402 (2018)</p>
 								<p>Under certain conditions, a new 2D polymorph of FeGe<sub>2</sub> can form by slowly heating a thin amorphous Ge layer over Fe<sub>3</sub>Si, which features 2D planes of monolayer Fe atoms separated by tetragonal Ge bilayers. The ordering phenomenon is interpreted as a minimization of the elastic energy of the epitaxial film. </p>
 
 								<section>
@@ -89,7 +91,7 @@
 								<hr>
 								
 								<h2 id="P3"><a href="https://doi.org/10.1103/PhysRevB.95.201306" style="color: #405c89">Specific heat and entropy of fractional quantum Hall states in the second Landau level</a></h2>
-								<p></i> B. A. Schmidt, K. Bennaceur, <a>S. Gaucher</a>, et al., Phys. Rev. B <b>95</b> 201306 (2017)</p>
+								<p></i> B. A. Schmidt, K. Bennaceur, <a>S. Gaucher</a>, G. Gervais, L. N. Pfeiffer, and K. W. West, Phys. Rev. B <b>95</b> 201306 (2017)</p>
 								<p>The 5/2 state of the fractional quantum Hall effect is especially difficult to probe, but could host quasiparticles obeying non-Abelian fractional statistics. An investigation of the specific heat in this state could be a way to measure its entropy and shed light on the nature of its statistical properties.</p>
 
 								<section>
@@ -100,7 +102,7 @@
 								<hr>
 
 								<h2 id="P2"><a href="https://doi.org/10.1063/1.4977833" style="color: #405c89">Growth of Fe<sub>3</sub>Si/Ge/Fe<sub>3</sub>Si trilayers on GaAs(001) using solid-phase epitaxy</a></h2>
-								<p><a>S. Gaucher</a> et al., Appl. Phys. Lett. <b>110</b> 102103 (2017)</p>
+								<p><a>S. Gaucher</a>, B. Jenichen, J. Kalt, U. Jahn, A. Trampert, and J. Herfort, Appl. Phys. Lett. <b>110</b> 102103 (2017)</p>
 								<p>We realized one of the rare examples of a semiconductor grown lattice-matched over a metallic substrate. The different crystallization energies problem was bypassed by developing a solid-phase epitaxy approach, whereby a thin amorphous Ge film is slowly annealed over ferromagnetic Fe<sub>3</sub>Si. Being able to obtain such magnetic tunnel junctions, where the barrier consists of a semiconductor, is a first step towards the realization of transistor-like devices that are also spin-sensitive.</p>
 
 								<section>
@@ -111,7 +113,7 @@
 								<hr>
 
 								<h2 id="P1" style="text-align: left;"><a href="https://doi.org/10.1038/srep13494" style="color: #405c89;">Mechanical Flip-Chip for Ultra-High Electron Mobility Devices</a></h2>
-								<p>K. Bennaceur, B. A. Schmidt, <a>S. Gaucher</a>, et al., Sci. Rep. <b>5</b> 13494 (2015)</p>
+								<p>K. Bennaceur, B. A. Schmidt, <a>S. Gaucher</a>, D. Laroche, M. P. Lilly, J. L. Reno, K. W. West, L. N. Pfeiffer, and G. Gervais, Sci. Rep. <b>5</b> 13494 (2015)</p>
 								<p>Extremely-high mobility two-dimensional electron gases are required to probe the exotic physics of the fractional quantum Hall effect. Since most nanofabrication techniques are invasive and irreversible, a flip-chip approach was developed to leave the samples in pristine conditions.</p>
 
 								<section>
