--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 							<section class="main" style="font-size:118%;">
 
 								<h2>About</h2>
-								<p>I'm a PhD candidate in physics enrolled at Humboldt in Berlin. The essence of my work takes place at the <a href="http://www.pdi-berlin.de">Paul-Drude-Institut</a> under the supervision of Prof.&nbsp;Dr.&nbsp;<a href="https://tinyurl.com/y5tubggm">Henning Riechert</a> and Dr.&nbsp;<a href="https://tinyurl.com/y6dfpk5d">Jens Herfort</a>.</p>
+								<p>I'm currently finishing up my thesis at HU Berlin and expect to receive my degree soon from the Department of Physics! The essence of my work took place at the <a href="http://www.pdi-berlin.de">Paul-Drude-Institut</a> under the supervision of Prof.&nbsp;Dr.&nbsp;<a href="https://tinyurl.com/y5tubggm">Henning Riechert</a> and Dr.&nbsp;<a href="https://tinyurl.com/y6dfpk5d">Jens Herfort</a>.</p>
 
 								<p>&ldquo;How can physics help build the electronics of tomorrow?&rdquo;&mdash; that's the question that motivates me. My <a href="http://gervaislab.mcgill.ca/Gaucher_MSc_Thesis.pdf">master's thesis</a> describes my first contributions to the cause. A general overview of my research can be found <a href="research.html">here</a>.</p>
 
