--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 							<section class="main" style="font-size:118%;">
 
 								<h2>About</h2>
-								<p>I'm currently finishing up my thesis at HU Berlin and expect to receive my degree soon from the Department of Physics! The essence of my work took place at the <a href="http://www.pdi-berlin.de">Paul-Drude-Institut</a> under the supervision of Prof.&nbsp;Dr.&nbsp;<a href="https://tinyurl.com/y5tubggm">Henning Riechert</a> and Dr.&nbsp;<a href="https://tinyurl.com/y6dfpk5d">Jens Herfort</a>.</p>
+								<p>I am currently finishing up a PhD thesis at HU Berlin and expect to receive my degree soon from the department of physics! The essence of my work took place at the <a href="http://www.pdi-berlin.de">Paul-Drude-Institut</a> under the supervision of Prof.&nbsp;Dr.&nbsp;<a href="https://tinyurl.com/y5tubggm">Henning Riechert</a> and Dr.&nbsp;<a href="https://tinyurl.com/y6dfpk5d">Jens Herfort</a>.</p>
 
 								<p>&ldquo;How can physics help build the electronics of tomorrow?&rdquo;&mdash; that's the question that motivates me. My <a href="http://gervaislab.mcgill.ca/Gaucher_MSc_Thesis.pdf">master's thesis</a> describes my first contributions to the cause. A general overview of my research can be found <a href="research.html">here</a>.</p>
 
@@ -80,7 +80,7 @@
 
 								<hr>
 								<h2>This website</h2>
-								<p>Many thanks to <a href="https://twitter.com/ajlkn">@ajlkn</a> from HTML5 UP for the original <a href="https://html5up.net/stellar">Stellar</a> template I've started with to make this website. My modified code is available in this <a href="https://github.com/samuelgaucher/gaucher.io">Git repository</a>.
+								<p>Many thanks to <a href="https://twitter.com/ajlkn">@ajlkn</a> from HTML5 UP for the original <a href="https://html5up.net/stellar">Stellar</a> template I've started with to make this website. My version of the code is available in this <a href="https://github.com/samuelgaucher/gaucher.io">Git repository</a>.
 								</p>								
 
 							</section>
