--- a/research.html
+++ b/research.html
@@ -55,13 +55,13 @@
 							<section class="main" style="font-size:118%;">
 								<h2>Experimental quantum nanoelectronics!</h2>
 								<h1> </h1>
-								<h2>Ongoing research</h2>
-								<p>I currently work on the growth by molecular-beam epitaxy of semiconductor heterostructures with ferromagnetic materials. The project adds to distributed efforts in the field of spintronics, the goal being to implement devices in which the electronic spin degree of freedom can be harnessed to achieve denser information processing. You can track our progress through the publications posted below. In 2017, I created a <a href="#P4">new 2D material</a> which I am now also investigating.</p>
+								<h2>PhD work</h2>
+								<p>I have dedicated the last few years on the growth by molecular-beam epitaxy of semiconductor heterostructures with ferromagnetic materials. The project adds to distributed efforts in the field of spintronics, the goal being to implement devices in which the electronic spin degree of freedom can be harnessed to achieve denser information processing. You can track our progress through the publications posted below. In 2017, I obtained a <a href="#P4">new 2D material</a> which I have also been investigating.</p>
 
-								<h2>MBE</h2>
+								<!--<h2>MBE</h2>-->
 								<p>Molecular-beam epitaxy (MBE) is a technique to create single-crystalline thin-films by deposition of atoms under ultra-high vacuum. The strength of MBE lies in the capacity it offers to engineer crystals with sub-nanometer precision, hence creating nanostructures in which quantum mechanical effects are revealed and made (more easily) accessible. MBE has been instrumental in expanding our knowledge of semiconductors, and paved new ways for research in physics, materials science, and nanoelectronics.</p>
 								
-								<h2>Interests</h2>
+								<h2>Scientific interests</h2>
 								<p>My scientific interests span a range of subjects: growth by MBE and physics of low-dimensional systems, spin phenomena in semiconductor nanostructures, electrical transport in magnetic semiconductors, integer and fractional quantum Hall effects. I wish to look deeper into topological quantum condensed matter, quantum anomalous and spin Hall effects, chiral Majorana fermions, and the ways in which all the above can be applied to quantum information technology. </p>
 
 								<br>
