--- a/research.html
+++ b/research.html
@@ -56,7 +56,7 @@
 								<h2>Experimental quantum nanoelectronics!</h2>
 								<h1> </h1>
 								<h2>PhD work</h2>
-								<p>I have dedicated the last few years on the growth by molecular-beam epitaxy of semiconductor heterostructures with ferromagnetic materials. The project adds to distributed efforts in the field of spintronics, the goal being to implement devices in which the electronic spin degree of freedom can be harnessed to achieve denser information processing. You can track our progress through the publications posted below. In 2017, I obtained a <a href="#P4">new 2D material</a> which I have also been investigating.</p>
+								<p>I have dedicated the last few years to the growth by molecular-beam epitaxy of semiconductor heterostructures with ferromagnetic materials. The project adds to distributed efforts in the field of spintronics, the goal being to implement devices in which the electronic spin degree of freedom can be harnessed to achieve denser information processing. You can track our progress through the publications posted below. In 2017, I obtained a <a href="#P4">new 2D material</a> which I have also been investigating.</p>
 
 								<!--<h2>MBE</h2>-->
 								<p>Molecular-beam epitaxy (MBE) is a technique to create single-crystalline thin-films by deposition of atoms under ultra-high vacuum. The strength of MBE lies in the capacity it offers to engineer crystals with sub-nanometer precision, hence creating nanostructures in which quantum mechanical effects are revealed and made (more easily) accessible. MBE has been instrumental in expanding our knowledge of semiconductors, and paved new ways for research in physics, materials science, and nanoelectronics.</p>
