--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							<div class="spotlight">
 								<span class="image"><img src="images/mehusky.png" alt="" /></span>
 								<div class="content">
-									<p style="font-size:135%;"> Soon-to-be physics PhD graduate living in Berlin, thrilled about connecting nanoelectronics and next-generation information technology. You can read <a href="about.html">more</a> about me, or take a look at my <a href="CV-SG.pdf">CV</a>. Feel free to <a href="about.html#contact">get in touch</a> to share or ask anything related to what I do! </p> <!-- related, or not!-->
+									<p style="font-size:135%;"> Soon-to-be physics PhD graduate living in Berlin, thrilled about connecting nanoelectronics and next-generation information technology. You can read <a href="about.html">more</a> about me, or take a look at my <a href="CV-SG.pdf" onclick="ga('send','event','Downloads','Click','CV');">CV</a>. Feel free to <a href="about.html#contact">get in touch</a> to share or ask anything related to what I do! </p> <!-- related, or not!-->
 								</div>
 							</div>
 						</section>
