--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		<!-- Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135626636-1"></script>
 		<script src="assets/js/googan.js"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-135626636-1');
+		</script>
 
 		<title>Samuel Gaucher</title>
 		<meta charset="utf-8" />
