--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,13 @@
 <html>
 	<head>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135626636-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			
+			gtag('config', 'UA-135626636-1');
+		</script>
 		<script src="assets/js/googan.js"></script>
 
 		<title>Samuel Gaucher</title>
