--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
 								<p>&ldquo;How can physics help build the electronics of tomorrow?&rdquo;&mdash; that's the question that motivates me. My <a href="http://gervaislab.mcgill.ca/Gaucher_MSc_Thesis.pdf" onclick="ga('send','event','Downloads','Click','Masters');">master's thesis</a> describes my first contributions to this cause. A general overview of my research can be found <a href="research.html">here</a>.</p>
 
-								<p>My <a href="CV-SG.pdf" onclick="ga('send','event','Downloads','Click','CV');">CV</a> in a nutshell: an academia-oriented career path focused on the physics of new materials and their applications for quantum information technology. My scientific skills can be used to tackle broader analytical and technological challenges in the industry.</p>
+								<p>My <a href="CV-SG.pdf" onclick="gtag('event','Click',{'event_category':'Downloads','event_label':'CV','value':1});">CV</a> in a nutshell: an academia-oriented career path focused on the physics of new materials and their applications for quantum information technology. My scientific skills can be used to tackle broader analytical and technological challenges in the industry.</p>
 
 								<p>While studying with <a href="http://gervaislab.mcgill.ca/home.php">Guillaume Gervais</a>, I was introduced to Python by some ingenious fellow graduate students who created this amazing <a href="https://github.com/LabGUI/LabGUI">LabGUI</a> project. I've since acquired a penchant for programming in general.</p>
 
