--- a/about.html
+++ b/about.html
@@ -61,9 +61,9 @@
 							<section class="main" style="font-size:118%;">
 
 								<h2>About</h2>
-								<p>I am currently finishing up a PhD thesis at HU Berlin and expect to receive my degree soon from the department of physics! The essence of my work took place at the <a href="http://www.pdi-berlin.de">Paul-Drude-Institut</a> under the supervision of Prof.&nbsp;Dr.&nbsp;<a href="https://tinyurl.com/y5tubggm">Henning Riechert</a> and Dr.&nbsp;<a href="https://tinyurl.com/y6dfpk5d">Jens Herfort</a>.</p>
+								<p>I've dedicated the last four years of my career to a PhD research project in physics. The essence of my work took place at the <a href="http://www.pdi-berlin.de">Paul-Drude-Institut</a> under the supervision of Prof.&nbsp;Dr.&nbsp;<a href="https://tinyurl.com/y5tubggm">Henning Riechert</a> and Dr.&nbsp;<a href="https://tinyurl.com/y6dfpk5d">Jens Herfort</a>.</p>
 
-								<p>&ldquo;How can physics help build the electronics of tomorrow?&rdquo;&mdash; that's the question that motivates me. My <a href="http://gervaislab.mcgill.ca/Gaucher_MSc_Thesis.pdf" onclick="gtag('event','Click',{'event_category':'Downloads','event_label':'Masters','value':1});">master's thesis</a> describes my first contributions to this cause. A general overview of my research can be found <a href="research.html">here</a>.</p>
+								<p>&ldquo;How will science build the electronics of tomorrow?&rdquo;&mdash; that's the question that motivates me. My <a href="http://gervaislab.mcgill.ca/Gaucher_MSc_Thesis.pdf" onclick="gtag('event','Click',{'event_category':'Downloads','event_label':'Masters','value':1});">master's thesis</a> describes my first contributions to this cause. A general overview of my research can be found <a href="research.html">here</a>.</p>
 
 								<p>My <a href="CV-SG.pdf" onclick="gtag('event','Click',{'event_category':'Downloads','event_label':'CV','value':1});">CV</a> in a nutshell: an academia-oriented career path focused on the physics of new materials and their applications for quantum information technology. My scientific skills can be used to tackle broader analytical and technological challenges in the industry.</p>
 
@@ -83,8 +83,8 @@
 											<li><a href="https://github.com/samuelgaucher" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
 											<!--<li><a href="#" class="icon fa-youtube alt"><span class="label">Youtube</span></a></li>-->
 										</ul>
-									</section>							
-
+									</section>	
+						
 								<hr>
 								<h2>This website</h2>
 								<p>Many thanks to <a href="https://twitter.com/ajlkn">@ajlkn</a> from HTML5 UP for the original <a href="https://html5up.net/stellar">Stellar</a> template I've started with to make this website. My version of the code is available in this <a href="https://github.com/samuelgaucher/gaucher.io">Git repository</a>.
