--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
 								<hr>
 								<h2 id="contact">Contact</h2>
-								<p>You can always reach me at <a href="mailto:gaucher@pdi-berlin.de">gaucher@pdi-berlin.de</a>. Feel free to connect via the following platforms:</p>	
+								<p>You can always reach me at <a href="mailto:samuel.gaucher@hotmail.com">samuel.gaucher@hotmail.com</a>. Feel free to connect via the following platforms:</p>	
 
 									<section>
 										<ul class="icons">
