--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
 								<hr>
 								<h2 id="contact">Contact</h2>
-								<p>You can now reach me with <a href="mailto:sam@gaucher.io">sam@gaucher.io</a>. Feel free to connect via the following platforms:</p>	
+								<p>You can now reach me with <a href="mailto:samuel@gaucher.io">samuel@gaucher.io</a>. Feel free to connect via the following platforms:</p>	
 
 									<section>
 										<ul class="icons">
