newest publication added

--- a/research.html
+++ b/research.html
@@ -75,6 +75,19 @@
 								<br>
 								<h2>Publications</h2>
 								<hr>
+
+								<h2 id="P4"><a href="https://doi.org/10.1103/PhysRevMaterials.4.104415" style="color: #405c89">Electronic and magnetic properties of α-FeGe<sub>2</sub> films embedded in vertical spin valve devices</a></h2>
+								<p>D. Czubak, <a>S. Gaucher</a>, L. Oppermann, J. Herfort, K. Zollner, J. Fabian, H. T. Grahn, and M. Ramsteiner, Phys. Rev. Mater 4, 104415 (2020)</p>
+								<p>The heterostructures created using the Fe<sub>3</sub>Si/FeGe<sub>2</sub>/Fe<sub>3</sub>Si thin film stacks could be turned into functioning vertical spin valves. Transport across the devices seems to indicate that FeGe<sub>2</sub> is metallic, and undergoes a ferromagnetic phase transition between 55 and 110 K. These measurements are encouraging in our quest to fabricate a spin-selective transistor.</p>
+
+								<section>
+									<ul class="icons" align="right">
+										<li ><a href="publications/Czubak_2020.pdf" class="icon fa-file"> PDF <span class="label">PDF</span></a></li>
+									</ul>
+								</section>	
+								<hr>
+
+
 								<h2 id="P5"><a href="https://doi.org/10.1088%2F1361-6641%2Faaddf0" style="color:#405c89;">Ferromagnet/semiconductor/ferromagnet hybrid trilayers grown using solid-phase epitaxy</a></h2>
 								<p><a>S. Gaucher</a>, B. Jenichen, and J. Herfort, Semicond. Sci. Technol. <b>33</b> 104005 (2018)</p>
 								<p>We're now able to grow lattice-matched semiconductors over both Fe<sub>3</sub>Si and Co<sub>2</sub>FeSi. Since the two ferromagnetic materials have different coercive fields, it is possible to control the orientation of their magnetization independently. This means a lot to produce devices that could be operated as spin-selective transistors. </p>
